--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,7 +51,7 @@ set -g status-fg white
 set -g window-status-current-format "#[fg=green][#I] #W"
 set -g window-status-format "#[fg=blue] #I #W "
 set -g status-interval 60  # update every 60s
-set -g status-right "#(./tmux/tmux-battery.sh) | %Y-%m-%d %H:%M"
+set -g status-right "#(./config/scripts/battery.sh) | %Y-%m-%d %H:%M"
 
 # Alt + 1..9 to switch to window 1..9
 bind -n M-1 select-window -t 1
