--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -3,10 +3,10 @@ opacity = 0.9
 padding = {x=3, y=3}
 
 [font]
-normal = {family = 'IntoneMono NF Light', style = 'Normal'}
-bold = {family = 'IntoneMono NF Light', style = 'Normal'}
-italic = {family = 'IntoneMono NF Light', style = 'Normal'}
-size = 7.9
+normal = {family = 'Iosevka ExtraLight Extended', style = 'Normal'}
+bold = {family = 'Iosevka ExtraLight Extended', style = 'Normal'}
+italic = {family = 'Iosevka ExtraLight Extended', style = 'Normal'}
+size = 7.4
 offset = {x=0, y=1}
 
 # Colours (Monokai Charcoal)
